force-app/main/default/objects/Dependency__c/Dependency__c.object-meta.xml
<CustomObject>
    <label>Project Dependency</label>
    <nameField>
        <displayFormat>PD# {YY}{MM}{DD}-{00000}</displayFormat>
        <label>Project Dependency Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Dependencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>