force-app/main/default/objects/Dependency__c/fields/Depends_on_Program__c.field-meta.xml
<CustomField>
    <fullName>Depends_on_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Depends on Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Program Dependents</relationshipLabel>
    <relationshipName>Program_Dependents</relationshipName>
    <type>Lookup</type>
</CustomField>