force-app/main/default/objects/Dependency__c/fields/Depends_on_Project__c.field-meta.xml
<CustomField>
    <fullName>Depends_on_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Depends on Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Project Dependents</relationshipLabel>
    <relationshipName>Project_Dependents</relationshipName>
    <type>Lookup</type>
</CustomField>