force-app/main/default/objects/Dependency__c/fields/Parent_project__c.field-meta.xml
<CustomField>
    <fullName>Parent_project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Related Dependencies</relationshipLabel>
    <relationshipName>Related_Dependencies</relationshipName>
    <type>Lookup</type>
</CustomField>